frontend for crud operations completed

--- a/backend/views/partials/navbar.hbs
+++ b/backend/views/partials/navbar.hbs
@@ -7,12 +7,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="dashboard">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="logout">Log-out</a>
         </li>
       </ul>
-      {{#if params.enableSearch}}
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      {{#if enableSearch}}
+      <form class="d-flex" action="getStudents" method="GET">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       {{/if}}
