--- a/backend/views/dashboard.hbs
+++ b/backend/views/dashboard.hbs
@@ -11,8 +11,7 @@
     <div class="card mb-3 mt-5 mx-auto shadow" style="max-width: 1000px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="/uploads/{{imageName}}" 
-                    alt="product image" class="img-fluid rounded-start">
+                <img src="/uploads/{{imageName}}" alt="product image" class="img-fluid rounded-start">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -34,24 +33,23 @@
                             </tr>
                         </tbody>
                     </table>
+                    {{#if user.isAdmin}}
+                    <div class="d-grid gap-2">
+                            <a class="btn btn-primary" href="addStudent">Add New Student</a>
+                            <a class="btn btn-primary" href="getStudents">Admin view</a>
+                    </div>
+                    {{else}}
+                    <div class="w-100 mt-5">
+                        <a class="btn btn-primary" href="getStudents">View Students</a>
+                    </div>
+                    {{/if}}
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        {{#if user.isAdmin}}
-        <div class="col-md-6">
-            <a class="btn btn-primary" href="addStudent">Add New Student</a>
-        </div>
-        <div class="col-md-6">
-            <a class="btn btn-primary" href="viewStudents">Admin view</a>
-        </div>
-        {{else}}
-        <div class="col-md-6">
-            <a class="btn btn-primary" href="view">View</a>
-        </div>
-        {{/if}}
-        
+    <div class="row ">
+
+
 
     </div>
 </div>
