--- a/backend/views/edit.hbs
+++ b/backend/views/edit.hbs
@@ -1,28 +1,30 @@
 {{>navbar}}
 
 <div class="container w-75 mt-5">
-    <p class="h3">{{msg}}</p>
-    <form class="row g-3 mt-3" method="post" action="addStudent" enctype="multipart/form-data">
+    <p class="h3">Edit student details here</p>
+    <form class="row g-3 mt-3" method="post" action="updateStudent?id={{user.id}}&_method=PUT"
+        enctype="multipart/form-data">
         <div class="col-md-6">
             <label for="name" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="name" name="name" required>
+            <input type="text" class="form-control" id="name" name="name" required value="{{user.name}}">
         </div>
         <div class="col-md-6">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password" class="form-control" id="password" name="password">
         </div>
         <div class="col-md-6">
             <label for="studentNumber" class="form-label">Student Number</label>
             <input type="text" class="form-control" id="studentNumber" name='studentNumber' required
-                placeholder="Enter unique student number">
+                placeholder="Enter unique student number" value="{{user.studentNumber}}">
         </div>
         <div class="col-md-6">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name='email' placeholder="Enter email" required>
+            <input type="email" class="form-control" id="email" name='email' placeholder="Enter email" required
+                value="{{user.email}}">
         </div>
         <div class="col-md-6">
             <label for="gender" class="form-label">Gender</label>
-            <select id="gender" name="gender" class="form-select" required>
+            <select id="gender" name="gender" class="form-select" required value="{{user.gender}}">
                 <option>Male</option>
                 <option>Female</option>
                 <option>Other</option>
@@ -31,7 +33,7 @@
         <div class="col-md-6">
             <label for="datePicker" class="form-label">Date</label>
             <input type="date" class="form-control" id="datePicker" name='dob' placeholder="Enter date of birth"
-                required>
+                value="{{user.dob}}" required>
         </div>
         <div class="col-12">
             <div class="mb-3">
@@ -39,8 +41,13 @@
                 <input class="form-control" type="file" id="formFile" name="uploadImage" accept=".jpg, .jpeg, .png">
             </div>
         </div>
-        <div class="col-12">
-            <button type="submit" class="btn btn-primary">Add Student</button>
+        <div class="col-md-6">
+            <button type="submit" class="btn btn-primary">Update</button>
+        </div>
+        <div class="col-md-6 mt-1">
+            <input type='submit' class="btn btn-primary btn-block btn-danger fw-bold" name='delete student'
+                value="Delete" formmethod="POST"
+                formaction='deleteStudent?id={{ user.id }}&_method=DELETE'>
         </div>
     </form>
 </div>
