--- a/backend/views/layouts/index.hbs
+++ b/backend/views/layouts/index.hbs
@@ -4,12 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>My Awesome App</title>
+  <title>Student-Corner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <link rel="stylesheet" href="http://cdn.webix.com/edge/webix.css" type="text/css" charset="utf-8">
+      <script src="http://cdn.webix.com/edge/webix.js" type="text/javascript" charsetset="utf-8"></script>
+      <link rel="stylesheet" href="/style.css" type="text/css" />
+
 
   {{!--
   <script src="/webix/webix.js" type="text/javascript" charset="utf-8"></script>
