--- a/backend/views/login.hbs
+++ b/backend/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="container w-50">
+{{!-- <div class="container w-50">
     <p class="h3 mt-4">Enter login credentials</p>
     <form class="mt-5" method="post" action="login">
         <div class="mb-3">
@@ -13,68 +13,42 @@
         </div>
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
-</div>
+</div> --}}
 
+<script type="text/javascript" charset="utf-8">
+    webix.ready(function () {
+        webix.ui({
+            view: "form",
+            id: 'logInForm',
+            action: '/student/login',
+            method: 'get',
+            maxWidth: 500,
+            elements: [
 
-{{!--
-<script>
-    webix.ui({
-        margin: 50,
-        type: 'clean',
-        cols: [
-            {},
-            {
-                view: "form",
-                id: "logInForm",
-                width: 600,
-                elementsConfig: {
-                    labelPosition: "top"
-                },
-                elements: [
-                    {
-                        view: 'fieldset',
-                        label: 'Enter login credentials',
-                        body: {
-                            rows: [
-                                { view: "text", label: "Student Unique Number", name: "name", type: 'text', required: true },
-                                { view: "text", type: "password", label: "Password", name: "password", required: true },
-                                {
-                                    margin: 5, cols: [
-                                        {
-                                            view: "button", value: "Login", css: "webix_primary", type: "submit",
-                                            click: webix.ajax().post("some.php", $$('logInForm').getValues())
-                                        },
-                                        { view: "button", value: "Cancel" }
-                                    ]
-                                }
+                { view: 'label', label: 'StudentNumber', width: 150, for: 'hi' },
+                { view: 'text', type: 'text', name: 'studentNumber', id: 'hi' },
+                { view: 'label', label: 'Password', width: 150, for: 'pass' },
+                { view: 'text', type: 'password', name: 'password', id: 'pass' },
+                {
+                    view: 'button', type: 'submit', autowidth: true, value: 'LogIn',
+                    click: function () {
+                        console.log('clicked')
+                        var data = this.getFormView().getValues();
 
-                            ]
-                        }
+                        console.log(data)
+                        //fetch('http://localhost:3000/student/login', {method:'POST',body: JSON.stringify(data) })
+                        //  .then(response => response.json())
+                        //send data to server
+                        
+                        webix.ajax().post("/student/login", data).then(function(data1){
+                                //window.location.href = "http://localhost:3000/student/dashboard";
+                                window.location.href = "http://localhost:3000/student/dashboard";
+                        });
+    
                     }
-                ],
-                rules: {
-                    $all: webix.rules.isNotEmpty
-                },
-            },
-            {}
-        ],
-    })
+                }
+            ],
 
-
-
-</script> --}}
-
-{{!-- click: function () {
-var form = this.getParentView();
-if (form.validate())
-webix.message("All is correct");
-else
-webix.message({ type: "error", text: "Form data is invalid" });
-} --}}
-
-{{!-- function save() {
-var values = $$("logInForm").getValues();
-webix.ajax().post("/user/login", values, function () {
-webix.message({ type: "debug", text: "Film is saved", expire: -1 });
-});
-} --}}
+        });
+    });
+</script>
