--- a/backend/views/signUp.hbs
+++ b/backend/views/signUp.hbs
@@ -1,6 +1,78 @@
 {{>navbar}}
 
-<div class="container w-75 mt-5">
+{{!-- name: name,
+password
+email,
+dob,
+studentNumber,
+uploadFile,
+gender --}}
+
+
+{{!-- {
+view:"form",
+id:"film_form",
+gravity:0.5,
+minWidth:200,
+// elements == rows, cols can be declared instead
+elements:[
+{ view:"text", name:"title", id:"inp_title", label:"Film Title" },
+{ view:"text", name:"year", id:"inp_year", label:"Release" },
+{}
+]
+} --}}
+
+<script>
+
+    var views = [
+        { view: "text", name: "name", id: "id_name", label: "Name", required: true },
+        { view: "text", name: "password", id: "id_pass", label: "Password", type: 'password', required: true },
+        { view: "text", name: "email", id: "id_email", label: "Email", required: true },
+        { view: "text", name: "studentNumber", id: "id_sn", label: "Student Number", required: true },
+        { view: "text", name: "dob", id: "id_dob", label: "DOB", required: true, type: 'date' },
+        { view: "text", name: "gender", id: "id_gender", label: "Gender", required: true },
+
+        //   <input class="form-control" type="file" id="formFile" name="uploadImage" accept=".jpg, .jpeg, .png">
+        {
+            view: "uploader", value: "Upload file",
+            name: "uploadFile",
+            multiple: false,
+            upload: 'http://localhost:3000/student/addStudent',
+            link: "list1"
+        },
+        {
+            view: "list", id: "list1", type: "uploader",
+            autoheight: true, borderless: true
+        },
+
+
+        {
+            view: 'button', type: 'submit', autowidth: true, value: 'Add',
+            click: function () {
+                console.log('clicked')
+                var data = this.getFormView().getValues();
+
+                console.log(data)
+
+                webix.ajax().post("/student/addStudent", data).then(function (data1) {
+                    window.location.href = "http://localhost:3000/student/getStudents"
+                });
+
+            }
+        }
+
+    ]
+
+    webix.ui({
+        view: 'form',
+        id: "add_form",
+        minWidth: 400,
+        // elements == rows, cols can be declared instead
+        elements: views
+    });
+</script>
+
+{{!-- <div class="container w-75 mt-5">
     <p class="h3">{{msg}}</p>
     <form class="row g-3 mt-3" method="post" action="addStudent" enctype="multipart/form-data">
         <div class="col-md-6">
@@ -43,4 +115,16 @@
             <button type="submit" class="btn btn-primary">Add Student</button>
         </div>
     </form>
-</div>
+</div> --}}
+
+{{!--
+{
+view: "uploader", value: "Upload file",
+name: "uploadFile",
+multiple: false,
+link: "list1"
+},
+{
+view: "list", id: "list1", type: "uploader",
+autoheight: true, borderless: true
+}, --}}
