--- a/backend/views/adminViewStudents.hbs
+++ b/backend/views/adminViewStudents.hbs
@@ -11,9 +11,11 @@ studentNumber: obj.username, --}}
     var decodeJson = decodeURIComponent("{{{result}}}");
     console.log(decodeJson)
     var jsonObj = JSON.parse(decodeJson);
+    let count = 1;
     var studentData = jsonObj.users.map(obj => {
         return ({
-            Image:  `<img src='/uploads/${obj.imageName}' style='width:30px'>`,
+            rank: count++,
+            image: `<img src='/uploads/${obj.imageName}' style='width:30px'>`,
             id: obj.id,
             name: obj.name,
             dob: obj.dob,
@@ -27,11 +29,20 @@ studentNumber: obj.username, --}}
     var tables = [];
     var config = {
         view: "datatable",
+        columns: [
+            { id: "rank", header:"", width: 30 },
+            { id: "image", header: jsonObj.context.image, width: 100 },
+            { id: "name", header: jsonObj.context.name, width: 200 },
+            { id: "dob", header: jsonObj.context.dob, width: 100 },
+            { id: "gender", header: jsonObj.context.gender, width: 100 },
+            { id: "email", header: jsonObj.context.email, width: 200 },
+            { id: "studentNumber", header: jsonObj.context.studentNumber, width: 200 }
+        ],
         data: webix.copy(studentData),
         select: true,
         autoConfig: true,
-        on:{
-            onItemClick(item){
+        on: {
+            onItemClick(item) {
                 console.log(item.row)
                 window.location.href = `http://localhost:3000/student/updateStudent?id=${item.row}`;
             }
